# mtu_tool

./: .gitignore  README.md  config.yaml  pyproject.toml
mtu_tool/: __main__.py  exceptions.py  helpers.py  main.py  pydantic_lab.py
mtu_tool/beautify/: interfaces.py  neighbors.py  path.py
mtu_tool/models/: itms.py  show_route.py
mtu_tool/procedure/: interfaces.py  neighbors.py  path.py
tests/: test_show_route_model.py
tests/example_data/show_ip_route/: 1.json  2.json  3.json  4.json  5.json
